--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,9 +10,9 @@ phases:
       - echo Running tests
       - npm install
       - npm test
-      - sudo apt-get update
+      - sudo yum update -y
       - curl -sL https://deb.nodesource.com/setup_14.x | sudo bash -
-      - sudo apt-get install nodejs
+      - sudo yum install nodejs
 
   build:
     commands:
