--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
     commands:
       - echo Running tests
       - npm install
+      - sudo yum install curl
       - npm test
       - sudo yum update -y
       - curl -sL https://deb.nodesource.com/setup_14.x | sudo bash -
