--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       - sudo yum install curl
         # npm test
       - sudo yum update -y
-      - curl -sL https://deb.nodesource.com/setup_14.x | sudo bash -
+      - curl -sL https://deb.nodesource.com/setup_14.x |  bash -
       - sudo yum install nodejs
 
   build:
